using UnityEngine;

public class controller : MonoBehaviour
{
    Animator animator;

    // Start is called once before the first execution of Update after the MonoBehaviour is created
    void Start()
    {
        animator = GetComponent<Animator>();
    }

    // Update is called once per frame
    void Update()
    {
        if(Input.GetKeyDown(KeyCode.Alpha1))
        {
            animator.SetTrigger("axe");
        }
        if(Input.GetKeyDown(KeyCode.Alpha2))
        {
            animator.SetTrigger("sword");
        }
        if(Input.GetKeyDown(KeyCode.Alpha3))
        {
            animator.SetTrigger("bow");
        }
        if(Input.GetKeyDown(KeyCode.Alpha4))
        {
            animator.SetTrigger("walk");
        }
        if(Input.GetKeyDown(KeyCode.Alpha5))
        {
            animator.SetTrigger("sneak");
        }
    }
}
